# rqcopt

./: .gitignore  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml
examples/: README.rst
examples/fermi_hubbard1d/: fermi_hubbard1d_dynamics_approx_larger_systems.hdf5  fermi_hubbard1d_dynamics_approx_larger_systems.py  fermi_hubbard1d_dynamics_circuit.py  fermi_hubbard1d_dynamics_opt.py  fermi_hubbard1d_dynamics_opt_n13.hdf5  fermi_hubbard1d_dynamics_opt_n21.hdf5  fermi_hubbard1d_dynamics_opt_n5.hdf5  fermi_hubbard1d_dynamics_opt_n9.hdf5
examples/fermihubbard1d/: fermihubbard_blockenc_opt.py
examples/heisenberg1d/: heisenberg1d_blockenc_opt.py  heisenberg1d_blockenc_opt_n3_complex.hdf5  heisenberg1d_blockenc_opt_n3_real.hdf5  heisenberg1d_blockenc_opt_n5_complex.hdf5  heisenberg1d_blockenc_opt_n5_real.hdf5  heisenberg1d_blockenc_opt_n7_complex.hdf5  heisenberg1d_blockenc_opt_n7_real.hdf5  heisenberg1d_dynamics_approx_larger_systems.hdf5  heisenberg1d_dynamics_approx_larger_systems.py  heisenberg1d_dynamics_circuit.py  heisenberg1d_dynamics_light_cone.py  heisenberg1d_dynamics_opt.py  heisenberg1d_dynamics_opt_n11.hdf5  heisenberg1d_dynamics_opt_n13.hdf5  heisenberg1d_dynamics_opt_n15.hdf5  heisenberg1d_dynamics_opt_n17.hdf5  heisenberg1d_dynamics_opt_n19.hdf5  heisenberg1d_dynamics_opt_n3.hdf5  heisenberg1d_dynamics_opt_n5.hdf5  (+12 more)
rqcopt/: __init__.py  brickwall_circuit.py  brickwall_opt.py  splitting_method.py  trust_region.py  util.py
test/: test_brickwall_circuit.py  test_splitting_method.py  test_trust_region.py  test_util.py
(+41 files in other folders)
